<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000" />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="200dp">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/welcome"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="italic"
            android:gravity="center" />

        <TextView
            android:id="@+id/wish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/wish"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:gravity="center" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/user"
                    android:inputType="text"
                    android:layout_marginBottom="8dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/forget_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="Forget Password?"
                    android:textColor="#1F8123"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/button_logIn"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginEnd="8dp"
                android:text="Log In"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#832F14"/>

            <Button
                android:id="@+id/button_signUp"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:text="Sign Up"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#832F14"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
